# aida-motor

./: README.md
gyroscooter_documents/hoverboard-firmware-hack-FOC/Arduino/hoverserial/: hoverserial.ino
gyroscooter_documents/hoverboard-firmware-hack-FOC/Inc/: config.h
lk_tech/: CMakeLists.txt  no_ros_CMakeLists.txt  package.xml
lk_tech/include/: Base.hxx  Data.hxx  Exception.hpp  Motor.hxx  MotorManager.hxx  PortHandler.hxx  SerialPort.hpp  SerialPort.hxx  SignalHandler.hxx
lk_tech/launch/: single_lk_tech_launch.py
lk_tech/src/: Acceleration.cxx  Base.cxx  Base_Acceleration.cxx  Base_Model.cxx  Base_Operation.cxx  Base_PID.cxx  Base_Position.cxx  Base_Position_Control.cxx  Base_Speed_Control.cxx  Base_State.cxx  Base_Torque.cxx  Base_Torque_Control.cxx  Model.cxx  Motor.cxx  MotorManager.cxx  PID.cxx  PortHandler.cxx  Position.cxx  SerialPort.cpp  SerialPort.cxx  State.cxx  main.cxx  no_ros.cxx
lk_tech_documents/: test_commands.c
